# docs/swagger.json
@@ -83,7 +83,7 @@
   ],
   "schemes": ["http", "https"],
   "paths": {
-    "/api/auth/signup": {
+    "/api/signup": {
       "post": {
         "summary": "User Sign Up",
         "description": "Create a new user account",
@@ -110,7 +110,7 @@
         }
       }
     },
-    "/api/auth/signin": {
+    "/api/signin": {
       "post": {
         "summary": "User Sign In",
         "description": "Authenticate user and generate access token",
@@ -121,8 +121,8 @@
             "name": "body",
             "schema": {
               "example": {
-                "email": "josh@gmail.com",
-                "password": "mutama333"
+                "email": "yona@gmail.com",
+                "password": "3333"
               },
               "required": true
             }
@@ -138,7 +138,7 @@
         }
       }
     },
-    "/api/blogs/create": {
+    "/api/blogs": {
       "post": {
         "summary": "Create a new blog",
         "description": "This endpoint is used to create a new blog",
@@ -183,9 +183,7 @@
             "description": "Blog created"
           }
         }
-      }
-    },
-    "/api/blogs/read/all": {
+      },
       "get": {
         "summary": "Get all blogs",
         "description": "This endpoint is used to get all blogs",
@@ -200,7 +198,7 @@
         }
       }
     },
-    "/api/blogs/{blogId}/update": {
+    "/api/blogs/{blogId}": {
       "patch": {
         "summary": "Update a blog by ID",
         "description": "This endpoint is used to update a single blog by its ID",
@@ -283,10 +281,7 @@
             "description": "Blog not found"
           }
         }
-      }
-    },
-
-    "/api/blogs/{blogId}/read": {
+      },
       "get": {
         "summary": "Get a single blog by ID",
         "description": "This endpoint is used to get a single blog by its ID",
@@ -310,9 +305,7 @@
             "description": "Blog not found"
           }
         }
-      }
-    },
-    "/api/blogs/{blogId}/delete": {
+      },
       "delete": {
         "summary": "Delete a blog by ID",
         "description": "This endpoint is used to delete a single blog by its ID",
@@ -343,7 +336,7 @@
         }
       }
     },
-    "/api/messages/create": {
+    "/api/messages": {
       "post": {
         "summary": "Create a new message",
         "description": "This endpoint is used to create a new message",
@@ -366,9 +359,7 @@
             "description": "Message created"
           }
         }
-      }
-    },
-    "/api/messages/read": {
+      },
       "get": {
         "summary": "Get all messages",
         "description": "This endpoint is used to get all messages",
@@ -385,56 +376,10 @@
         }
       }
     },
-    "/api/comments": {
-      "get": {
-        "summary": "Get all comments",
-        "description": "This endpoint is used to get all comments",
-        "tags": ["Comments"],
-        "responses": {
-          "200": {
-            "description": "Successful response"
-          }
-        }
-      },
+    "/api/blog/{commentId}/comment": {
       "post": {
-        "summary": "Create a new comment",
-        "description": "This endpoint is used to create a new comment on a blog",
-        "tags": ["Comments"],
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "blogId": {
-                    "type": "string"
-                  },
-                  "description": {
-                    "type": "string"
-                  }
-                },
-                "required": ["blogId", "description"]
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "description": "Comment created"
-          }
-        }
-      }
-    },
-    "/api/comments/{commentId}": {
-      "put": {
-        "summary": "Update a comment by ID",
-        "description": "This endpoint is used to update a single comment by its ID",
+        "summary": "create a comment by ID",
+        "description": "This endpoint is used to create a comment",
         "tags": ["Comments"],
         "security": [
           {
@@ -450,6 +395,13 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "in": "formData",
+            "name": "message",
+            "type": "string",
+            "required": false,
+            "description": "Your comment"
           }
         ],
         "requestBody": {
@@ -459,7 +411,9 @@
                 "type": "object",
                 "properties": {
                   "description": {
-                    "type": "string"
+                    "message": {
+                      "type": "string"
+                    }
                   }
                 },
                 "required": ["description"]
@@ -477,9 +431,9 @@
           }
         }
       },
-      "delete": {
-        "summary": "Delete a comment by ID",
-        "description": "This endpoint is used to delete a single comment by its ID",
+      "patch": {
+        "summary": "Update a comment by ID",
+        "description": "This endpoint is used to update a single comment by its ID",
         "tags": ["Comments"],
         "security": [
           {
@@ -490,16 +444,41 @@
           {
             "name": "commentId",
             "in": "path",
-            "description": "ID of the comment to delete",
+            "description": "ID of the comment to update",
             "required": true,
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "in": "formData",
+            "name": "message",
+            "type": "string",
+            "required": false,
+            "description": "Your comment"
           }
         ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "description": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "required": ["description"]
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
-          "204": {
-            "description": "Comment deleted"
+          "200": {
+            "description": "Comment updated"
           },
           "404": {
             "description": "Comment not found"
@@ -507,8 +486,8 @@
         }
       }
     },
-    "/api/blogs/like/{blogId}": {
-      "post": {
+    "/api/blogs/{blog_id}/like": {
+      "patch": {
         "summary": "Like a blog",
         "description": "This endpoint is used to like a blog",
         "tags": ["Likes"],
@@ -519,7 +498,7 @@
         ],
         "parameters": [
           {
-            "name": "blogId",
+            "name": "blog_id",
             "in": "path",
             "description": "ID of the blog to like",
             "required": true,
@@ -531,37 +510,6 @@
         "responses": {
           "200": {
             "description": "Blog liked"
-          },
-          "404": {
-            "description": "Blog not found"
-          }
-        }
-      }
-    },
-    "/api/blogs/dislike/{blogId}": {
-      "post": {
-        "summary": "Dislike a blog",
-        "description": "This endpoint is used to dislike a blog",
-        "tags": ["Likes"],
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "blogId",
-            "in": "path",
-            "description": "ID of the blog to dislike",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Blog disliked"
           },
           "404": {
             "description": "Blog not found"
