# src/controllers/controller.ts
@@ -58,10 +58,16 @@ export const readBlog = async (req: Request, res: Response) => {
 
 export const singleBlog = async (req: Request, res: Response) => {
   try {
-    const post = await Blogs.findById(req.params.blog_id).populate(
-      "author",
-      "first_name second_name "
-    );
+    const post = await Blogs.findById(req.params.blog_id)
+      .populate("author", "first_name second_name ")
+      .populate({
+        path: "comments",
+        select: "message",
+        populate: {
+          path: "author",
+          select: "first_name second_name ",
+        },
+      });
     res.send(post);
   } catch {
     res.status(404);
@@ -134,13 +140,25 @@ export const updateBlog = async (req: Request, res: Response) => {
   }
 };
 
-export const deleteBlog = async (req: Request, res: Response) => {
+export const deleteBlog = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
   try {
-    await Blogs.deleteOne({ _id: req.params.blog_id });
-    res.status(204);
-    res.send({ message: "blog is deleted" });
-  } catch {
-    res.status(404);
-    res.send({ error: "The blog does not exist!" });
+    console.log("THIS IS THRE ID", req.params.blog_id);
+    const result = await Blogs.deleteOne({ _id: req.params.blog_id });
+    console.log(result);
+    if (result.deletedCount === 1) {
+      console.log("WHY CAN'T YOU WORK");
+      res.status(204).json({ msg: "blog is deleted" });
+    } else {
+      res
+        .status(204)
+        .json({ msg: "blog failed to be deleted try again later" });
+    }
+  } catch (error) {
+    return next(error);
+    // res.status(404).send({ error: "The blog does not exist!" });
   }
 };
